news and updates spacing issue, share icons discussions-detail.html.twig

--- a/app/assets/styles/style.scss
+++ b/app/assets/styles/style.scss
@@ -69,8 +69,8 @@ img {
         left: 0;
         right: 0; /* Make the picture taking the size of it's parent */
         width: 100%; /* This if for the object-fit */
-        height: 100%; /* This if for the object-fit */
-        object-fit: contain; /* Equivalent of the background-size: cover; of a background-image */
+        height: 90%; /* This if for the object-fit */
+        object-fit: cover; /* Equivalent of the background-size: cover; of a background-image */
         object-position: center;}
  }
 
@@ -84,9 +84,7 @@ img {
 #registrationModal  {padding-right:0 !important;}
 #block-latestinsightssidebarblock .row {width: auto;}
 #block-athena-content img {max-width:100%; min-height:auto;}
-.reason-section {
-    margin: 100px 0 50px 0;
-}
+ 
 .corporate-txt img  {height:auto; max-width:100%;}
 .top-banner .logos {width:auto;}
  
